# groonga-gobject

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  groonga-gobject.pc.in
doc/: Makefile.am
doc/reference/: Makefile.am  groonga-gobject-docs.sgml
doc/text/: Makefile.am  news.md
groonga-gobject/: Makefile.am  ggrn-command.c  ggrn-command.h  ggrn-context.c  ggrn-context.h  ggrn-error.c  ggrn-error.h  ggrn-internal.c  ggrn-internal.h  ggrn.c  ggrn.h
sample/: Makefile.am  groonga.py
test/: Makefile.am  run-test.sh  suite-groonga-gobject-test.c  test-command.c
